--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ bio:                'Jekyll version of the Massively theme by HTML5UP'
 description:        "Jekyll version of the Massively theme by HTML5UP"
 locale:             en_US
 baseurl: "/jekyll-theme-massively" # the subpath of your site, e.g. /blog
-url: "https://andresnino1.github.io" # the base hostname & protocol for your site
+url: "http://andresnino1.github.io" # the base hostname & protocol for your site
 
 # Comments
 disqus_shortname:   default
